@@ -2,3 +2,4 @@ python:
   - 2.7
   - 3.5
   - 3.6
+  - 3.7
