@@ -1,6 +1,6 @@
-New Features and Important Changes in GammaLib 1.5.3
+New Features and Important Changes in GammaLib 1.5.4
 
-5 May 2019
+15 May 2019
 
 
 1. Introduction
@@ -123,7 +123,7 @@ None
 
 20. CTA interface
 -----------------
-Use "BKG" instead of "BGD" for CTA background column (#2343).
+Handle new CTA energy dispersion format.
 
 
 21. COMPTEL interface
