@@ -1,3 +1,11 @@
+2019-05-15
+
+        * Bug fix version 1.5.4 released
+        ================================
+
+        Handle new CTA energy dispersion format
+
+
 2019-05-11
 
         * Bug fix version 1.5.3 released
